manifests/velocity-external-access.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: velocity
  namespace: games
  labels:
    app: velocity
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
    - name: velocity
      port: 25565
      targetPort: 25565
      protocol: TCP
  selector:
    grounds/server-type: velocity
    agones.dev/role: gameserver

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: velocity
  namespace: games
  labels:
    app: velocity
spec:
  entryPoints:
    - minecraft
  routes:
    - match: HostSNI(`*`)
      services:
        - name: velocity
          port: 25565
